unpackaged/main/default/objects/AcctSeedERP__Shipment__c/AcctSeedERP__Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>