unpackaged/main/default/objects/AcctSeedERP__Shipment__c/fields/AcctSeedERP__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>