unpackaged/main/default/objects/AcctSeedERP__Shipment__c/fields/AcctSeedERP__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>