unpackaged/main/default/objects/AcctSeedERP__Shipment__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <description>Text name of carrier.</description>
    <formula>AcctSeedERP__Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Name</label>
    <type>Text</type>
</CustomField>