unpackaged/main/default/objects/AcctSeedERP__Shipment__c/listViews/AcctSeedERP__All.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>