unpackaged/main/default/objects/AcctSeedERP__Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Carrier__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>AcctSeedERP__Sales_Order__c</columns>
    <columns>AcctSeedERP__Shipment_Date__c</columns>
    <columns>AcctSeedERP__Shipping_Reference__c</columns>
    <columns>Return_Shipping_Reference__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>